y.output
Terminaux inutilisés dans la grammaire

   ID
   FLOTTANT


Grammaire

    0 $accept: ligne $end

    1 ligne: E '\n'

    2 E: E '+' T
    3  | E '-' T
    4  | T

    5 T: T '*' F
    6  | T '/' F
    7  | F

    8 F: '(' E ')'
    9  | ENTIER


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'\n' (10) 1
'(' (40) 8
')' (41) 8
'*' (42) 5
'+' (43) 2
'-' (45) 3
'/' (47) 6
error (256)
ID (258)
ENTIER (259) 9
FLOTTANT (260)


Non-terminaux, suivis des règles où ils apparaissent

$accept (13)
    à gauche: 0
ligne (14)
    à gauche: 1, à droite: 0
E (15)
    à gauche: 2 3 4, à droite: 1 2 3 8
T (16)
    à gauche: 5 6 7, à droite: 2 3 4 5 6
F (17)
    à gauche: 8 9, à droite: 5 6 7


État 0

    0 $accept: . ligne $end

    ENTIER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    ligne  aller à l'état 3
    E      aller à l'état 4
    T      aller à l'état 5
    F      aller à l'état 6


État 1

    9 F: ENTIER .

    $défaut  réduction par utilisation de la règle 9 (F)


État 2

    8 F: '(' . E ')'

    ENTIER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    E  aller à l'état 7
    T  aller à l'état 5
    F  aller à l'état 6


État 3

    0 $accept: ligne . $end

    $end  décalage et aller à l'état 8


État 4

    1 ligne: E . '\n'
    2 E: E . '+' T
    3  | E . '-' T

    '+'   décalage et aller à l'état 9
    '-'   décalage et aller à l'état 10
    '\n'  décalage et aller à l'état 11


État 5

    4 E: T .
    5 T: T . '*' F
    6  | T . '/' F

    '*'  décalage et aller à l'état 12
    '/'  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (E)


État 6

    7 T: F .

    $défaut  réduction par utilisation de la règle 7 (T)


État 7

    2 E: E . '+' T
    3  | E . '-' T
    8 F: '(' E . ')'

    '+'  décalage et aller à l'état 9
    '-'  décalage et aller à l'état 10
    ')'  décalage et aller à l'état 14


État 8

    0 $accept: ligne $end .

    $défaut  accepter


État 9

    2 E: E '+' . T

    ENTIER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    T  aller à l'état 15
    F  aller à l'état 6


État 10

    3 E: E '-' . T

    ENTIER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    T  aller à l'état 16
    F  aller à l'état 6


État 11

    1 ligne: E '\n' .

    $défaut  réduction par utilisation de la règle 1 (ligne)


État 12

    5 T: T '*' . F

    ENTIER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    F  aller à l'état 17


État 13

    6 T: T '/' . F

    ENTIER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    F  aller à l'état 18


État 14

    8 F: '(' E ')' .

    $défaut  réduction par utilisation de la règle 8 (F)


État 15

    2 E: E '+' T .
    5 T: T . '*' F
    6  | T . '/' F

    '*'  décalage et aller à l'état 12
    '/'  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 2 (E)


État 16

    3 E: E '-' T .
    5 T: T . '*' F
    6  | T . '/' F

    '*'  décalage et aller à l'état 12
    '/'  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 3 (E)


État 17

    5 T: T '*' F .

    $défaut  réduction par utilisation de la règle 5 (T)


État 18

    6 T: T '/' F .

    $défaut  réduction par utilisation de la règle 6 (T)
